manifests/extensions/servicemesh-advanced/peer-authentication-strict.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: apps-strict
  namespace: apps
spec:
  mtls:
    mode: STRICT
